--- a/quotes/quot/template/quot/index.html
+++ b/quotes/quot/template/quot/index.html
@@ -1,5 +1,5 @@
 {% extends "quot/base.html" %}
-
+{% load extract %}
 {% block content %}
 
 <div class="row">
@@ -10,7 +10,7 @@
         <span class="text" itemprop="text">
             {{quote.quote}}
         </span>
-        <span>by <small class="author" itemprop="author">{{quote.author}}</small>
+        <span>by <small class="author" itemprop="author">{{quote.author|author}}</small>
         <a href="/author/{{quote.author}}">(about)</a>
         </span>
         <div class="tags">
@@ -28,9 +28,13 @@
     <nav>
         <ul class="pager">
 
+            <li class="previous">
+                <a href="/page/1/"><span aria-hidden="true">←</span> Previous</a>
+            </li>
+
 
             <li class="next">
-                <a href="/page/2/">Next <span aria-hidden="true">→</span></a>
+                <a href="/page/3/">Next <span aria-hidden="true">→</span></a>
             </li>
 
         </ul>
