--- a/quotes/quot/template/quot/base.html
+++ b/quotes/quot/template/quot/base.html
@@ -9,11 +9,12 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static 'quot/style.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'quot/favicon.ico' %}">
     <title>Document</title>
 </head>
 <body>
 <div class="container">
-        <div class="row header-box pt-3">
+        <div class="row header-box pt-3 mb-3">
             <div class="col-md-8">
                 <h1>
                     <a href="/" style="text-decoration: none">Quotes to Scrape</a>
