--- a/quotes/quot/template/quot/base.html
+++ b/quotes/quot/template/quot/base.html
@@ -31,9 +31,8 @@
             </div>
         </div>
 
-    {% block content %} {% endblock %}
-
-
+    {% block content %}
+    {% endblock %}
 
     </div>
 </body>
