not working commit for users authentication

--- a/quotes/app_auth/templates/app_auth/logout.html
+++ b/quotes/app_auth/templates/app_auth/logout.html
@@ -1,6 +1,7 @@
 {% extends "quot/base.html" %}
 
 {% block body %}
+{% csrf_token %}
     <div class="container mt-3">
         <h1>Come back</h1>
     </div>
