--- a/quotes/app_auth/templates/app_auth/logout.html
+++ b/quotes/app_auth/templates/app_auth/logout.html
@@ -1,8 +1,10 @@
+
 {% extends "quot/base.html" %}
 
-{% block body %}
-{% csrf_token %}
+{% block content %}
+
     <div class="container mt-3">
-        <h1>Come back</h1>
+        <h1>Повертайтесь будь ласка!</h1>
     </div>
+
 {% endblock %}
