--- a/quotes/app_auth/templates/app_auth/register.html
+++ b/quotes/app_auth/templates/app_auth/register.html
@@ -1,6 +1,6 @@
 {% extends "quot/base.html" %}
 
-{% block body %}
+{% block content %}
 <div class="container mt-3">
     <h2>Register User</h2>
     {% if form.errors and form.non_field_errors %}
@@ -24,15 +24,15 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Password
-                {{ form.pwd1 }}
+                {{ form.password1 }}
             </label>
-            <span>{{form.errors.pwd1}}</span>
+            <span>{{form.errors.password1}}</span>
         </div>
         <div class="mb-3">
             <label class="form-label">Repeat Password
-                {{ form.pwd2 }}
+                {{ form.password2 }}
             </label>
-            <span>{{form.errors.pwd2}}</span>
+            <span>{{form.errors.password2}}</span>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
         <button type="reset" class="btn btn-secondary">Reset</button>
